manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-agent
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5555
  selector:
    app: agent-svc
