manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neon-stress-ingress-agent
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "neon-agent.station.codes"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stress-agent
            port:
              number: 80
